# ohpal

./: .gitignore  CHANGELOG.md  LICENSE  README.md  app.py  app.spec  config.py  config.toml  explore.py  justfile  launcher.py  makefile  profile.py  profile_cluster.py  profile_direct.py  pyproject.toml  setup.bat  setup.sh  sources.txt
ampm/: cluster_cache.py  clustering.py  config.py  correction.py  mask_cache.py  masking.py  parts.py  plotting.py  sampling.py  setup_build.py  stats.py  stl_stream.py
ampm/views/: __init__.py  bar.py  contour.py  cov_summary.py  k_distance.py  kde.py  layer_viewer.py  scatter_2d.py  scatter_3d.py  single_layer.py
apps/ampm_analyzer/: README.md  pyproject.toml  run.py
apps/ampm_analyzer/src/ampm_analyzer/: __init__.py  __main__.py  main.py
apps/ampm_analyzer/src/ampm_analyzer/assets/: ampm.icns
apps/ampm_analyzer/src/ampm_analyzer/views/: __init__.py  bar.py  contour.py  cov_summary.py  k_distance.py  kde.py  layer_viewer.py  scatter_2d.py  scatter_3d.py  single_layer.py
assets/: ampm.icns
docs/: APP.md  DATAHUB.md  MAKEFILE.md  PIPELINE.md
etc/: density.py
examples/: cov_summary.py  parametric.py  tune_eps.py  view_3d.py  view_layers.py
examples/pipeline/: 01_load_and_mask.py  02a_assign_parts_direct.py  02b_assign_parts_dbscan.py  03_compute_cov.py  04_visualize.py  README.md
tests/: test_cluster_cache.py  test_clustering.py  test_config.py  test_correction.py  test_masking.py  test_parts.py  test_plotting.py  test_stl_stream.py
