[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ampm-analyzer"
version = "1.1.1"
description = "Analysis pipeline for Renishaw 500S PBF-LB AMPM monitoring data"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Oliver H. Page", email = "oliverhpage@gmail.com"},
]
license = {text = "All rights reserved."}
dependencies = [
    "polars>=1.0",
    "pyarrow>=14",
    "plotly>=5.0",
    "trimesh[easy]>=4.0",
    "shapely>=2.0",
    "rtree>=1.0",
    "networkx>=3.0",
    "scikit-learn>=1.3",
    "scipy>=1.10",
    "numpy>=1.24",
    "PyQt6>=6.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pyinstaller>=6.21"
]

[tool.setuptools.packages.find]
include = ["ampm*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]